[gd_scene load_steps=9 format=3 uid="uid://davtmq7r5411t"]

[ext_resource type="Script" uid="uid://uo3qj6v0i2au" path="res://scripts/visual_helpers/skull_cream_explode.gd" id="1_7stph"]
[ext_resource type="ArrayMesh" uid="uid://bsvob8wm5fimq" path="res://assets/meshes/enemies/cone.res" id="2_mlx58"]
[ext_resource type="ArrayMesh" uid="uid://wyusejyj1htc" path="res://assets/meshes/enemies/skull1.res" id="3_0ek0i"]
[ext_resource type="ArrayMesh" uid="uid://tgf7d1fyjt5o" path="res://assets/meshes/enemies/skull2.res" id="4_y4mc4"]
[ext_resource type="PackedScene" uid="uid://c76ggriths1rd" path="res://scenes/instantiable/vfx/explosion_light.tscn" id="5_mlx58"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_6cdb8"]
points = PackedVector3Array(0.090781, 0.00590396, -0.0962261, -0.127804, -0.0613595, -0.012155, -0.127804, -0.0613595, 0.00460984, 0.00670985, -0.532204, -0.00378492, 0.065572, -0.0613595, 0.105495, -0.0184991, 0.00590396, -0.129904, -0.0857561, -0.0782149, 0.0971004, 0.124434, -0.0193264, 0.0214241, -0.0941508, -0.0109514, -0.0962261, -0.0100797, -0.523776, 0.0130293, 0.0151293, -0.0950176, 0.122334, 0.124434, -0.0361818, -0.0205745, 0.107595, -0.0277541, 0.063472, -0.0100797, -0.506974, -0.012155, 0.0151293, -0.0109514, -0.129904, 0.0151293, -0.498546, 0.0130293, 0.090781, -0.0193264, -0.0962261, -0.0268939, -0.0782149, 0.122334, 0.090781, -0.0782149, 0.088681, -0.127804, -0.0361818, -0.0205745, -0.0773366, -0.128623, -0.0794366, -0.0941508, -0.103445, 0.0802862, 0.124434, -0.0529845, 0.00460984, -0.0100797, -0.0193264, -0.129904, 0.0151293, -0.46494, -0.0205745, 0.00670985, -0.523776, 0.0130293, 0.0151293, -0.506974, -0.00378492, 0.0992004, -0.0109514, -0.0878561, -0.0941508, -0.0277541, -0.0962261, -0.0184991, -0.481743, -0.012155, 0.116015, -0.00252372, -0.0458081, -0.119385, -0.0697872, 0.0298435)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_uoh6f"]
points = PackedVector3Array(-0.0810314, 0.22936, -0.0622419, 0.189474, 0.155365, 0.0275524, 0.188102, 0.13966, 0.0275027, 0.0404419, 0.0868164, 0.180604, 0.0298819, 0.0497464, -0.0887115, 0.0884534, 0.304735, -0.0204112, 0.0724492, 0.203358, -0.137984, 0.0669445, 0.282733, 0.107135, 0.175284, 0.0742884, 0.178718, -0.0962371, 0.139732, 0.0537781, 0.157563, 0.0222193, 0.0648185, -0.04407, 0.0550712, -0.0252812, 0.189692, 0.213962, -0.0256759, -0.0714164, 0.134074, -0.0949054, 0.0614227, 0.082058, -0.11942, -0.0283864, 0.293078, 0.0116674, 0.160975, 0.223611, 0.0903316, -0.0280445, 0.24503, -0.104199, -0.0367541, 0.212358, 0.0892006, 0.140532, 0.129162, -0.0672825, -0.0128539, 0.144708, -0.137579, -0.103467, 0.208621, 0.00629161, 0.0827552, 0.261177, -0.0993656, -0.0921171, 0.102403, 0.0169681, 0.129369, 0.286271, 0.0274602, 0.142355, 0.0855556, 0.193974, 0.0082698, 0.305281, -0.0205791, 0.0562179, 0.213295, 0.143116, 0.167519, 0.229522, -0.0571487, 0.0352437, 0.296975, 0.0798575, -0.10343, 0.155356, -0.036327, -0.0649497, 0.08169, -0.0620547)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_yraqy"]
points = PackedVector3Array(-0.123621, 0.119585, -0.0306381, 0.112533, 0.0383646, 0.0457899, 0.106227, 0.0482239, 0.05075, -0.1241, -0.0486784, 0.204049, -0.0568512, -0.0615306, -0.0590749, -0.0169596, 0.147858, 0.125417, 0.0286779, 0.114089, -0.0807317, -0.00186427, -0.0468333, 0.185983, 0.0582226, -0.0468402, -0.0444133, -0.133475, -0.0885835, 0.0963846, -0.148862, 0.106778, 0.0718622, 0.013295, 0.169055, 0.0205908, -0.0471929, 0.0382624, -0.111062, 0.104875, 0.094014, -0.0101014, -0.132072, 0.0232929, -0.0143625, 0.0626864, -0.0561946, 0.0209135, -0.0669878, 0.168567, 0.0106623, 0.0637874, 0.00804882, -0.0802873, -0.158002, 0.0231659, 0.055771, -0.012036, 0.0828218, 0.15944, -0.0118167, -0.0779206, -0.0351013, -0.110509, 0.0974572, 0.129455, 0.104076, -0.0121343, 0.00035479, -0.047034, 0.128708, -0.0698465, 0.0133154, 0.164081, 0.0859719, -0.0913514, 0.157406, 0.0705494, -0.0623116, -0.0274114, -0.090695, -0.0816169, -0.0263505, 0.209994, 0.0513159, 0.0823308, 0.109303, 0.101899, -0.011176, 0.0556838, -0.0068138, -0.0473482, -0.0802, -0.148892, 0.10935, 0.00504788)

[node name="skull_cream_explode" type="Node3D"]
script = ExtResource("1_7stph")
impulse_strength = 8.0

[node name="cone" type="RigidBody3D" parent="."]

[node name="cone_mesh" type="MeshInstance3D" parent="cone"]
mesh = ExtResource("2_mlx58")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="cone"]
shape = SubResource("ConvexPolygonShape3D_6cdb8")

[node name="skull1" type="RigidBody3D" parent="."]

[node name="skull1_mesh" type="MeshInstance3D" parent="skull1"]
mesh = ExtResource("3_0ek0i")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="skull1"]
shape = SubResource("ConvexPolygonShape3D_uoh6f")

[node name="skull2" type="RigidBody3D" parent="."]

[node name="skull2_mesh" type="MeshInstance3D" parent="skull2"]
mesh = ExtResource("4_y4mc4")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="skull2"]
shape = SubResource("ConvexPolygonShape3D_yraqy")

[node name="ExplosionLight" parent="." instance=ExtResource("5_mlx58")]
